# cdc_dbt_utils

./: .env.sample  .gitignore  .sqlfluff  CHANGELOG.md  CLAUDE.md  LICENSE  dbt_project.yml  packages.yml  plan.md  pyproject.toml  readme.md
.github/workflows/: claude-code-review.yml
ai-logs/: notification.json  post_tool_use.json  pre_tool_use.json  stop.json  user_prompt_submit.json
docs/: column_name_reference.sql  column_name_reference_edited.sql  dim_date_build_prompt.md  dim_date_select.sql  dim_date_specification.md  dim_trade_date_select.sql  dim_trade_date_select_v2.sql  enhancement-roadmap.md  high-priority-features.md  logging-integration-proposal.md  logging-setup-guide.md
examples/: logging_example.sql
integration_tests/: README.md  dbt_project.yml  run_tests.sh
integration_tests/macros/: check_logging_results.sql
integration_tests/models/: test_basic_logging.sql  test_custom_params.sql  test_error_logging.sql  test_failed_model.sql
macros/: README.md  drop_dev_schemas.sql  examine_calendar_data.sql  last_run_fields.sql  logging_integration.sql  macros.yml  star.sql
models/dw_util/: dim_date.sql  dim_date.yml  dim_date_old.sql  dim_date_retail.sql  dim_date_retail.yml  dim_date_trade.sql  dim_date_trade.yml  dim_month.sql  dim_month.yml  dim_quarter.sql  dim_quarter.yml  dim_time.sql  dim_time.yml  dim_trade_date.sql  dim_trade_date.yml  dim_trade_date_b4_enhance.yml.txt  dim_trade_date_enhanced.sql  dim_trade_month.sql  dim_trade_month.yml  dim_trade_quarter.sql  dim_trade_quarter.yml  dim_trade_week.sql  dim_trade_week.yml  dim_week.sql  dim_week.yml
